form url changed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ server.tomcat.access_log_enabled: true
 server.tomcat.basedir: target/tomcat
 spring.data.mongodb.host=ec2-34-214-91-244.us-west-2.compute.amazonaws.com
 spring.data.mongodb.port=27017
+server.port = 8090
